--- a/example-popup29.html
+++ b/example-popup29.html
@@ -228,7 +228,7 @@
             </svg>
         <h2>Не удалось отправить код подтверждения</h2>
 
-       <p>Попробуйте повторить запрос позднее</p>
+       <p class="modal-txt">Попробуйте повторить запрос позднее</p>
             <a href="#" rel="modal:close" class="btn">Вернуться к заявлению</a>
         
     </div>
@@ -237,11 +237,11 @@
 <!-- popup 45-->
 <div class="modal expiration-date" id="modal-expiration-date">
     <div class="modal-body">
-        <h2>Проверьте ваши данные</h2>
+        <h2 class="modal-title">Проверьте ваши данные</h2>
        <p>Ваше ФИО на портале <strong>Константинопольский Игорь Константинович</strong>, оно совпадает с реальным? </p>
        <div class="btn-group">           
-            <a href="#"  class="btn">Нет</a>
-            <a href="#"  class="btn filled">Да</a>
+            <a href="#" class="btn">Нет</a>
+            <a href="#" class="btn filled">Да</a>
         </div>
     </div>
 </div>
@@ -254,5 +254,4 @@
 <script src="js/example-popup29.js"></script>
 </body>
 
-</html>
 </html>
