--- a/request-unep12.html
+++ b/request-unep12.html
@@ -170,7 +170,7 @@
                     </ul>
                 </div>
                 <div class="heading-conteiner">
-                    <div class="heading-wrapper">
+                    <div class="heading-wrapper receiving">
                         <div class="heading__title-page">
                             <a href="#">
                                 <img src="./img/services/icon-arrow back.svg" alt="arrow">
@@ -243,13 +243,12 @@
                         <div class="identification__wrapper">
                             <div class="identification-left__container">
                                 <div class="identification-txt__container">
-                                    <h2>Придите во Фронт Офис </h2>
-                                    <p>Пожалуйста, пройдите во Фронт Офис для подписания бумажного документа</p>
+                                    <h2 class="identification-title">Придите во Фронт Офис </h2>
+                                    <p class="identification-txt">Пожалуйста, пройдите во Фронт Офис для подписания бумажного документа</p>
                                 </div>
                             </div>
 
-                            <div class="btn-group">
-
+                            <div class="btn-group address">
                                 <a href="#modal-sample" rel="modal:open" class="btn back-link back">
                                     <span>Адреса Фронт Офисов</span>
                                 </a>
@@ -266,7 +265,7 @@
             </footer>
         </section>
     </main>
-    <div id="modal-sample" class="modal">
+    <div id="modal-sample" class="modal address-modal">
         <div class="modal-body memo-main">
             <h5>Адреса Фронт Офисов</h5>
             <ul>
