--- a/request-unep14.html
+++ b/request-unep14.html
@@ -370,6 +370,7 @@
         </section>
     </main>
     <script src="js/jquery-3.4.1.min.js "></script>
+    <script src="js/valid-form.js"></script>
     <script src="js/request-unep14.js"></script>
 </body>
 
