--- a/request-unep15.html
+++ b/request-unep15.html
@@ -265,8 +265,8 @@
                         <div class="notification__wrapper">
                             <img src="img/icon-smile-sad.svg" alt="notification">
                             <div class="notification-txt__container">
-                                <h2>При отправке ваших перс. данных произошла техническая ошибка</h2>
-                                <p>Техническая поддержка уже работает над ней, скоро мы все исправим.</p>
+                                <h2 class="notif-title">При отправке ваших перс. данных произошла техническая ошибка</h2>
+                                <p class="notif-descrip">Техническая поддержка уже работает над ней, скоро мы все исправим.</p>
                             </div>
                         </div>
                     </div>
@@ -277,8 +277,8 @@
                                 <p class="notif-txt">После подписи уведомления о переходе на КЭДО вам будет необходимо заполнить еще один документ и передать его во Фронт Офис.</p>
                             </div>
                             <div class="btn__container">
-                                <a href="#">Посмотреть адрес</a>
-                                <a href="request-unep8.html">Вернуться к оформлению</a>
+                                <a href="#" class="back-decor">Посмотреть адрес</a>
+                                <a class="back-decor" href="request-unep8.html">Вернуться к оформлению</a>
                             </div>
                         </div>
                     </div>
@@ -286,10 +286,12 @@
                     <div class="notification front-office">
                         <div class="notification__wrapper">
                             <div class="notification-txt__container">
-                                <h2>Придите во Фронт Офис </h2>
-                                <p>Пожалуйста, распечатайте шаблон соглашения, подпишите и передайте во Фронт Офис, чтобы продолжить получение УНЭП.</p>
+                                <h2 class="front-office__title">Придите во Фронт Офис </h2>
+                                <p class="front-office__txt">Пожалуйста, распечатайте шаблон соглашения, подпишите и передайте во Фронт Офис, чтобы продолжить получение УНЭП.</p>
                             </div>
-                            <a href="#modal-sample" rel="modal:open" class="btn">Адреса Фронт Офисов</a>
+                            <div class="btn-group address">
+                                <a href="#modal-sample" rel="modal:open" class="btn back-link back">Адреса Фронт Офисов</a>
+                            </div>
 
                         </div>
                     </div>
