--- a/request-unep8.html
+++ b/request-unep8.html
@@ -109,7 +109,8 @@
                     <div class="profile-desc">
                         <div class="name-people">Константинопольский И. К.</div>
                         <div class="count-table">
-                            <p>Таб. номер </p><span> 156479</span></div>
+                            <p>Таб. номер </p><span> 156479</span>
+                        </div>
                     </div>
                     <a class="user-logout">
                         <img src="img/logout.svg" alt="">
@@ -170,7 +171,7 @@
                     </ul>
                 </div>
                 <div class="heading-conteiner">
-                    <div class="heading-wrapper">
+                    <div class="heading-wrapper receiving">
                         <div class="heading__title-page">
                             <a href="#">
                                 <img src="./img/services/icon-arrow back.svg" alt="arrow">
@@ -212,7 +213,8 @@
                                         </div>
                                         <div class="sd-status-separator"></div>
                                     </div>
-                                    <div class="sd-status-description">Проверка персональных данных для получения УНЭП</div>
+                                    <div class="sd-status-description">Проверка персональных данных для получения УНЭП
+                                    </div>
                                 </a>
                                 <a href="#sd-status-tab-4" class="sd-status-item stop">
                                     <div class="sd-status-visual-elements">
@@ -256,7 +258,9 @@
                                     <div class="signing-container__wrapper">
                                         <div class="signing-container-left">
                                             <h2>Подписание</h2>
-                                            <span>Введите проверочный код, отправленный на номер <a href="#">8 (910) 876-54-32</a> <img src="img/icon-pencil edit.svg" alt="edit"> </span>
+                                            <span>Введите проверочный код, отправленный на номер <a href="#">8 (910)
+                                                    876-54-32</a> <img src="img/icon-pencil edit.svg" alt="edit">
+                                            </span>
                                             <span class="time-code">Код действует до 26.03.2021 14:43.</span>
                                             <a href="#" class="reject-doc">Отклонить документ</a>
                                         </div>
@@ -272,7 +276,8 @@
                                             </div>
                                             <div class="btns-groups"> <button class="btn filled" disabled>Подтвердить</button>
                                                 <p class="time-code again">Отправить код повторно через 29:59 мин.</p>
-                                                <!--  <a href="#">Отправить код повторно</a> --></div>
+                                                <!--  <a href="#">Отправить код повторно</a> -->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -307,14 +312,15 @@
 
                         </div>
                     </div>
-                    <div class="btn-container__subscribe"> <a href="#" class="btn filled subscribe bottom">Подписать</a></div>
+                    <div class="btn-container__subscribe"> <a href="#" class="btn filled subscribe bottom">Подписать</a>
+                    </div>
 
 
 
                     <div class="introduction-container">
                         <div class="introduction__wrapper">
                             <div class="part-left">Ознакомьтесь с ЛНА</div>
-                            <div class="part-right"><a href="#">Ознакомиться с ЛНА</a></div>
+                            <div class="part-right"><a href="#">Ознакомиться</a></div>
                         </div>
                     </div>
                     </div>
