--- a/signing-application27.html
+++ b/signing-application27.html
@@ -266,7 +266,9 @@
                                 <div class="signing-container__wrapper">
                                     <div class="signing-container-left">
                                         <h2>Подписание</h2>
-                                        <span>Введите проверочный код, отправленный на номер <a href="#">8 (910) 876-54-32</a> <img src="img/icon-pencil edit.svg" alt="edit"> </span>
+                                        <span class="verification-code">Введите проверочный код, отправленный на номер
+                                            <a href="#">8 (910) 876-54-32 <img src="img/icon-pencil edit.svg" width="16" height="16" alt="edit"></a>
+                                        </span>
                                         <span class="time-code">Код действует до 26.03.2021 14:43.</span>
                                         <a href="#" class="reject-doc">Отклонить документ</a>
                                     </div>
