--- a/template-start-page-kedo.html
+++ b/template-start-page-kedo.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/ui.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tooltipster.bundle.css">
     <link rel="stylesheet" href="css/tooltipster.bundle.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/templ-start-page-kedo.css">
     <title>Main</title>
 </head>
@@ -197,9 +197,9 @@
                                 <img class="img-notif" src="img/icon-notif.svg" alt="">
                                 <div class="card-description">
                                     <p class="card-txt">
-                                        Отсутствует усиленная неквалифицированная электронная подпись (УНЭП<img class="tooltip-borderless tooltipstered" src="./img/q2.svg" width="16" height="16" title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда либо еще. 
+                                        Отсутствует усиленная неквалифицированная электронная подпись (УНЭП<img title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда либо еще. 
                                         С помощью УНЭП вы сможете подписывать справки из налоговой.
-                                        Чтобы подписывать все типы доокументов, вам нужно получить обе подписи – ПЭП и УНЭП." alt="info">).
+                                        Чтобы подписывать все типы доокументов, вам нужно получить обе подписи – ПЭП и УНЭП." class="tooltip-borderless tooltipstered" src="./img/q2.svg" width="16" height="16" alt="info">).
                                     </p>
                                     <p>Без нее подписание некоторых документов не доступно.</p>
                                     <a href="#">Получить УНЭП</a>
@@ -233,8 +233,10 @@
                                 <img class="card-item__img" src="img/icon-stylus.svg" alt="">
                                 <div class="">
                                     <div class="card-item__desc-content">
-                                        <h2>Получение УНЭП</h2><img id="img-que" title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда-либо еще. 
-                                        С помощью УНЭП вы сможете подписать любой документ, но для ее получения необходимо сначала получить ПЭП." class="tooltip-borderless tooltipstered" src="./img/q2.svg" width="16" height="16" alt=""></div>
+                                        <h2>Получение УНЭП</h2>
+                                        <img id="img-que" title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда-либо еще. 
+                                        С помощью УНЭП вы сможете подписать любой документ, но для ее получения необходимо сначала получить ПЭП." class="tooltip-borderless tooltipstered" src="./img/q2.svg" width="16" height="16" alt="">
+                                    </div>
                                     <p class="desc-phrase">УНЭП не получена</p>
                                 </div>
                             </div>
@@ -260,9 +262,10 @@
                                 <img class="card-item__img" src="img/icon-pencil.svg" alt="">
                                 <div class="">
                                     <div class="card-item__desc-content">
-                                        <h2>Получение ПЭП</h2><img title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда-либо еще. 
-                                        С помощью ПЭП вы сможете подписать все, кроме справок из налоговой.
-                                        Чтобы подписывать все документы, вам нужно получить УНЭП, для этого также понадобится ПЭП." class="tooltip-borderless tooltipstered" id="img-que" src="./img/q2.svg" width="16" height="16" alt=""></div>
+                                        <h2>Получение ПЭП</h2>
+                                        <img id="img-que" title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда-либо еще. 
+                                        С помощью УНЭП вы сможете подписать любой документ, но для ее получения необходимо сначала получить ПЭП." class="tooltip-borderless tooltipstered" src="./img/q2.svg" width="16" height="16" alt="">
+                                    </div>
                                     <p class="desc-phrase">ПЭП не получена</p>
                                 </div>
                             </div>
