--- a/template-start-page-kedo.html
+++ b/template-start-page-kedo.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/ui.css">
-    <link rel="stylesheet" href="css/tooltipster.bundle.css">
-    <link rel="stylesheet" href="css/tooltipster.bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/tooltipster.bundle.css">
+    <link rel="stylesheet" href="css/tooltipster.bundle.min.css">
     <link rel="stylesheet" href="css/templ-start-page-kedo.css">
     <title>Main</title>
 </head>
@@ -263,8 +263,8 @@
                                 <div class="">
                                     <div class="card-item__desc-content">
                                         <h2>Получение ПЭП</h2>
-                                        <img id="img-que" title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда-либо еще. 
-                                        С помощью УНЭП вы сможете подписать любой документ, но для ее получения необходимо сначала получить ПЭП." class="tooltip-borderless tooltipstered" src="./img/q2.svg" width="16" height="16" alt="">
+                                        <img class="tooltip-borderless tooltipstered" src="./img/q2.svg" width="24" height="24" alt="info" title="Иногда в задачах вам нужно будет подписывать документы. Электронные подписи позволяют делать это онлайн, без явки в офис, банк и куда-либо еще. 
+                                        С помощью УНЭП вы сможете подписать любой документ, но для ее получения необходимо сначала получить ПЭП.">
                                     </div>
                                     <p class="desc-phrase">ПЭП не получена</p>
                                 </div>
