--- a/request-unep22.html
+++ b/request-unep22.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/ui.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <link rel="stylesheet" href="css/request-unep15.css">
+    <link rel="stylesheet" href="css/request-unep22.css">
     <title>Main</title>
 </head>
 
@@ -202,30 +202,30 @@
                                         <div class="sd-status-icon "><img src="img/icon-ok.svg" alt=""></div>
                                         <div class="sd-status-separator"></div>
                                     </div>
-                                    <div class="sd-status-description">Бумажное соглашение об использовании УНЭП</div>
+                                    <div class="sd-status-description">Подписание соглашения о применении УНЭП</div>
                                 </a>
-                                <a href="#sd-status-tab-3" class="sd-status-item active">
+                                <a href="#sd-status-tab-3" class="sd-status-item error">
                                     <div class="sd-status-visual-elements">
                                         <div class="sd-status-icon">
                                             3
                                         </div>
                                         <div class="sd-status-separator"></div>
                                     </div>
-                                    <div class="sd-status-description">Проверка перс. данных для выпуска УНЭП</div>
+                                    <div class="sd-status-description">Проверка персональных данных для получения УНЭП</div>
                                 </a>
-                                <a href="#sd-status-tab-4" class="sd-status-item ready">
+                                <a href="#sd-status-tab-4" class="sd-status-item active">
                                     <div class="sd-status-visual-elements">
                                         <div class="sd-status-icon">4</div>
                                         <div class="sd-status-separator"></div>
                                     </div>
-                                    <div class="sd-status-description">Идентификация </div>
+                                    <div class="sd-status-description">Идентификация очно</div>
                                 </a>
-                                <a href="#sd-status-tab-5" class="sd-status-item ready">
+                                <a href="#sd-status-tab-5" class="sd-status-item stop">
                                     <div class="sd-status-visual-elements">
                                         <div class="sd-status-icon">5</div>
                                         <div class="sd-status-separator"></div>
                                     </div>
-                                    <div class="sd-status-description">Подписание заявления на УНЭП</div>
+                                    <div class="sd-status-description">Подписание заявления на получение УНЭП</div>
                                 </a>
                                 <a href="#sd-status-tab-6" class="sd-status-item ready">
                                     <div class="sd-status-visual-elements">
@@ -240,58 +240,13 @@
                         </div>
                     </div>
 
-                    <div class="identification">
-                        <div class="identification__wrapper">
-                            <div class="identification-left__container">
-                                <img src="img/icon-people.svg" alt="identification">
-                                <div class="identification-txt__container">
-                                    <h2>Пройдите идентификацию</h2>
-                                    <p>В соответствии с законодательством РФ, вам потребуется пройти идентификацию личности.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <div class="btn-group">
-                                <a href="#" class="btn filled submit-app">
-                                    <span>Пройти через ЕСИА</span>
-                                </a>
-                                <a href="#" class="btn back-link back">
-                                    <span>Пройти очно</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="notification">
-                        <div class="notification__wrapper">
-                            <img src="img/icon-smile-sad.svg" alt="notification">
-                            <div class="notification-txt__container">
-                                <h2 class="notif-title">При отправке ваших перс. данных произошла техническая ошибка</h2>
-                                <p class="notif-descrip">Техническая поддержка уже работает над ней, скоро мы все исправим.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="notification small">
-                        <div class="notification__wrapper">
-                            <div class="notification-txt__container">
-                                <p class="notif-txt">После подписи уведомления о переходе на КЭДО вам будет необходимо заполнить еще один документ и передать его во Фронт Офис.</p>
-                            </div>
-                            <div class="btn__container">
-                                <a href="#" class="back-decor">Посмотреть адрес</a>
-                                <a class="back-decor" href="request-unep8.html">Вернуться к оформлению</a>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="notification front-office">
                         <div class="notification__wrapper">
                             <div class="notification-txt__container">
-                                <h2 class="front-office__title">Придите во Фронт Офис </h2>
-                                <p class="front-office__txt">Пожалуйста, распечатайте шаблон соглашения, подпишите и передайте во Фронт Офис, чтобы продолжить получение УНЭП.</p>
+                                <h2>Вы выбрали очную идентификацию</h2>
+                                <p>Пожалуйста, обратитесь к вашему руководителю лично для прохождения идентификации.</p>
                             </div>
-                            <div class="btn-group address">
-                                <a href="#modal-sample" rel="modal:open" class="btn back-link back">Адреса Фронт Офисов</a>
-                            </div>
+                            <a href="#modal-sample" rel="modal:open" class="btn filled">Адреса Фронт Офисов</a>
 
                         </div>
                     </div>
@@ -315,6 +270,7 @@
     </div>
     <script src="js/jquery-3.4.1.min.js "></script>
     <script src="js/jquery.modal.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
     <script src="js/request-unep14.js "></script>
 </body>
 
